data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_800.wast
;; 1. **Test Call to Imported Function with `nop` Before and After**:    - **Constraint Checked**: Ensures `nop` does not affect the call to an imported function.    - **Description**: Create a module that imports a function (`importedFunc`). Inside an exported function, place a `nop` instruction before and after the call to `importedFunc`. The differential behavior will be checked by comparing if the execution flow and stack state remain unchanged across implementations.

(assert_invalid
  (module
    (import "env" "importedFunc" (func $importedFunc))
    (func (export "testFunc")
      nop
      call $importedFunc
      nop
    )
  )
  "type mismatch"
)